util/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mario-ingress
  namespace: mario-game
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mario.madhan.app
    secretName: mario-tls
  rules:
    - host: mario.madhan.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mario-service
                port:
                  number: 8080
